add: try-catch for errors

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beutiful world</title>
   <link rel="stylesheet" href="style.css">
+  <script src="main.js" defer></script>
 </head>
 
 <body>
@@ -21,6 +22,8 @@
     <h2>Unsplash</h2>
     <p>Photos for everyone</p>
   </footer>
+
+
 </body>
 
 </html>
