--- a/public/index.html
+++ b/public/index.html
@@ -4,26 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beutiful world</title>
+  <title>Nirlat</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script src="main.js" defer></script>
+
 </head>
 
 <body>
   <header>
-    <h1>Beutiful world</h1>
+    <img src="img/logo.jpg" alt="logo">
+    <h1>Nirlat - Paints for Interior and Exterior Decoration</h1>
+    <h2>Our products</h2>
   </header>
   <main>
-    <img
-      src="https://images.unsplash.com/photo-1489447068241-b3490214e879?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-      alt="waterfall">
+    <div class="btns"></div>
   </main>
   <footer>
-    <h2>Unsplash</h2>
-    <p>Photos for everyone</p>
+
   </footer>
 
-
+  <script src="main.js"></script>
 </body>
 
 </html>
