hw-lesson-2: task1, task3

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,12 @@
 <body>
   <header>
     <img src="img/logo.jpg" alt="logo">
-    <h1>Nirlat - Paints for Interior and Exterior Decoration</h1>
+    <h1>Nirlat<br>Paints for Interior and Exterior Decoration</h1>
     <h2>Our products</h2>
+    <div class="cart">Cart</div>
   </header>
   <main>
-    <div class="btns"></div>
+    <div class="goods-list">Products</div>
   </main>
   <footer>
 
