--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,6 @@
   <header>
     <img src="img/logo.jpg" alt="logo">
     <h1>Nirlat<br>Paints for Interior and Exterior Decoration</h1>
-    <h2>Our products</h2>
-    <div class="cart">Cart</div>
   </header>
   <main>
     <div class="goods-list">Products</div>
@@ -24,8 +22,10 @@
   <footer>
 
   </footer>
+  <script src="button.js"></script>
+  <script src="script.js"></script>
 
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
 </body>
 
 </html>
