--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   </header>
   <main>
     <div class="goods-list">Products</div>
+    <div class="btn show-more">Load more</div>
   </main>
   <footer>
 
