--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
   <title>Nirlat</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -23,10 +22,7 @@
   <footer>
 
   </footer>
-  <script src="button.js"></script>
-  <script src="script.js"></script>
-
-  <!-- <script src="main.js"></script> -->
+  <script src="./js/shop.js"></script>
 </body>
 
 </html>
